--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "src/module.geom.js",
   "devDependencies": {
-    "jest": "26.x"
+    "mocha": "^8.2.1",
+    "expect": "^26.6.2"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "example": "node test/example.js"
   },
-  "jest": {
-    "rootDir": "test",
-    "verbose": true,
-    "testRegex": "(\\.|/)test\\.js$"
+  "mocha": {
+    "bail": false,
+    "recursive": false,
+    "spec": "test/*.test.js"
   },
   "repository": {
     "type": "git",
