--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/module.geom.js",
+  "files": [
+    "src/*"
+  ],
+  "dependencies": {
+    "@nrd/fua.core.util": "1.0.0"
+  },
   "devDependencies": {
     "mocha": "^8.2.1",
     "expect": "^26.6.2"
