--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "src/module.geom.js",
   "files": [
-    "src/*",
-    "src/geometries/*",
-    "src/algorithms/*"
+    "src/*"
   ],
   "dependencies": {
     "@nrd/fua.core.util": "1.0.0"
