migration to github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nrd/fua.module.geom",
+  "name": "@fua/module.geom",
   "version": "1.0.0",
   "description": "",
   "main": "src/module.geom.js",
@@ -7,11 +7,11 @@
     "src/*"
   ],
   "dependencies": {
-    "@nrd/fua.core.util": "1.0.0"
+    "@fua/core.util": "^1.0.12"
   },
   "devDependencies": {
-    "mocha": "^8.2.1",
-    "expect": "^26.6.2"
+    "expect": "26.x",
+    "mocha": "10.x"
   },
   "scripts": {
     "test": "mocha",
@@ -24,12 +24,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@git02.int.nsc.ag:10022/research/fua/module/geom.git"
+    "url": "ssh://git@github.com:nicosResearchAndDevelopment/fua.module.geom.git"
   },
   "keywords": [
     "GeoJSON",
     "Geometry"
   ],
-  "author": "Simon Petrac <spetrac@nicos-ag.com>",
-  "license": "UNLICENSED"
+  "author": "Simon Petrac <pfoerdie@gmail.com>",
+  "license": "MIT"
 }
